--- a/src/components/artic/article.scss
+++ b/src/components/artic/article.scss
@@ -1,7 +1,7 @@
 @import "../../style/variable.scss";
 
 .article{
-	max-width: 50%;
+	width: 80%;
 	overflow:hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
