--- a/src/components/artic/article.scss
+++ b/src/components/artic/article.scss
@@ -1,29 +1,32 @@
 @import "../../style/variable.scss";
-
-.article{
-	width: 80%;
-	overflow:hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	font-size: $content-font-size;
-	display: inline-block;
-	.article-title{
-		cursor: pointer;
-		padding: 8px;
-		font-size: $title-font-size;
-		border-bottom: 1px solid $borderColor;
-		letter-spacing:3px;
-		margin-bottom: 5px;
-		&:hover{
-			color: $title-active;
-		}
-	}
-	.article-content{
-		p:nth-of-type(1){
-			margin: 10px 0;
-		}
-	}
-	.article-info{
-		padding: 0 15% 0 5%;
-	}
+.article {
+    width: 80%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: $content-font-size;
+    display: inline-block;
+    .article-title {
+        cursor: pointer;
+        padding: 10px;
+        font-size: $title-font-size;
+        border-bottom: 1px solid $borderColor;
+        letter-spacing: 3px;
+        margin-bottom: 5px;
+        &:hover {
+            color: $title-active;
+        }
+    }
+    .article-content {
+        p:nth-of-type(1) {
+            margin: 10px 0;
+            padding: 0 10px;
+        }
+    }
+    .article-tag {
+        padding-left: 10px;
+    }
+    .article-info {
+        padding: 0 15% 0 5%;
+    }
 }
