--- a/src/container/articleDetail/index.scss
+++ b/src/container/articleDetail/index.scss
@@ -1,42 +1,22 @@
 /* 
     文章默认样式
  */
- *{
-     margin: 0;
-     padding: 0;
- }
- .artile-detail{
-     p{
-        margin-bottom: 1.3em;
-        line-height: 1.7em;
-     }
-     blockquote{
-        padding: 10px 20px;
-        margin: 0 0 20px;
-        font-family: "ff-tisa-web-pro-1", "ff-tisa-web-pro-2", "Lucida Grande", "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
-        font-weight: lighter;
-        font-size: 1em;
-        border-left: 3px solid #BF1827;
-     }
-     blockquote p:last-child {
-        margin-bottom: 0;
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.article-detail {
+    h1 {
+        padding: 10px 0;
     }
-    ol, ul {
-        margin: 0 0 1.3em 2.5em;
+    .article-info {
+        >div:last-child {
+            span {
+                margin-right: 20px;
+            }
+        }
+        margin-bottom: 20px;
     }
-    ol {
-        list-style-type: decimal;
-    }
-    pre{
-        margin-bottom: 1.3em;
-        padding: 1em 2.5%;
-        background: #e8f2fb;
-        border: 1px solid #c9e1f6;
-        border-radius: 3px;
-        font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-        font-size: .9em;
-        font-weight: normal;
-        line-height: 1.3em;
-        overflow: scroll;
-    }
- }
+}
