--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,82 +1,82 @@
 @import './variable.scss';
-
 .blog-flex {
-	display: flex;
+    display: flex;
 }
 
 .blog-flex-x-center {
-	justify-content: center;
+    justify-content: center;
 }
 
 .blog-flex-y-center {
-	align-items: center;
+    align-items: center;
 }
 
 .blog-flex-justify {
-	justify-content: space-between;
+    justify-content: space-between;
 }
-.blog-flex-row-y{
-	flex-direction: column;
+
+.blog-flex-row-y {
+    flex-direction: column;
 }
-.blog-flex-1{
-	flex: 1;
+
+.blog-flex-1 {
+    flex: 1;
 }
+
 body,
 html {
-	height: 100%;
-
-	> .root {
-		height: 100%;
-		.index-root{
-			height: 100%;
-		}
-		.content,
-		.sider {
-			background-color: $bgColor;
-		}
-
-		.sider {
-			border-right: 1px solid $borderColor;
-			box-shadow: 1px;
-			background-image: url('../static/images/bg.jpg');
-			.left-nav{
-				text-align: center;
-				color: white;
-				>img{
-					width: 300px;
-					height: 300px;
-					border-radius: 50%;
-
-				}
-				>*{
-					font-size: 24px;
-					text-align: center;
-				}
-			}
-		}
-
-		.content {
-			padding-top: 40px;
-			padding-left: 100px;
-			overflow-x: hidden;
-			overflow-y: auto;
-		}
-	}
+    height: 100%;
+    >.root {
+        height: 100%;
+        .index-root {
+            height: 100%;
+        }
+        .content,
+        .sider {
+            background-color: $bgColor;
+        }
+        .sider {
+            border-right: 1px solid $borderColor;
+            box-shadow: 1px;
+            background-image: url('../static/images/bg.jpg');
+            .left-nav {
+                text-align: center;
+                color: white;
+                >img {
+                    width: 300px;
+                    height: 300px;
+                    border-radius: 50%;
+                }
+                >* {
+                    font-size: 24px;
+                    text-align: center;
+                }
+            }
+        }
+        .right {
+            background-color: white;
+            overflow-y: auto;
+            .content {
+                padding-top: 40px;
+                width: 80%;
+            }
+        }
+    }
 }
+
 // 省略显示省略号
-
 .blog-overflow-ellipsis {
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
-// 显示两行文字，溢出隐藏
 
+// 显示两行文字，溢出隐藏
 .blog-two-overflow-ellipsis {
-	display: -webkit-box;
-	-webkit-box-orient: vertical;
-	-webkit-line-clamp: 2;
-	word-break: break-all;
-	overflow: hidden;
-	white-space: normal;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    word-break: break-all;
+    overflow: hidden;
+    white-space: normal;
 }
