--- a/src/components/artic/article.scss
+++ b/src/components/artic/article.scss
@@ -18,9 +18,10 @@
         }
     }
     .article-content {
-        p:nth-of-type(1) {
+        div:nth-of-type(1) {
             margin: 10px 0;
             padding: 0 10px;
+            max-height: 150px;
         }
     }
     .article-tag {
