--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -30,8 +30,9 @@ html {
         height: 100%;
         .index-root {
             height: 100%;
+            position: relative;
         }
-        .content,
+        .content, 
         .header,
         .sider {
             background-color: $bgColor;
